--- a/index.html
+++ b/index.html
@@ -566,8 +566,8 @@
       <div class="contact-info">
         <h2>Contact Us</h2>
         <p><strong>Address:</strong><br>High Ground Road, Zirakpur – Patiala Highway, Punjab</p>
-        <p><strong>Phone:</strong><br><a href="tel:+919023199199">+91 90231-99199</a></p>
-        <p><strong>Email:</strong><br><a href="mailto:anil.tnwr@gmail.com">anil.tnwr@gmail.com</a></p>
+        <p><strong>Phone:</strong><br><a class="color-grey" href="tel:+919023199199">+91 90231-99199</a></p>
+        <p><strong>Email:</strong><br><a class="color-grey" href="mailto:anil.tnwr@gmail.com">anil.tnwr@gmail.com</a></p>
         <a href="https://wa.me/919023199199?text=Hi%20there%2C%20I%20am%20interested%20in%20your%20project!" class="whatsapp-button" target="_blank">
           <img src="./icons/whatsapp_icon.png" alt="WhatsApp" />
           Chat Now
