--- a/index.html
+++ b/index.html
@@ -546,15 +546,11 @@
   <section id="location-map" class="map-section">
     <h2>Find Us Here</h2>
     <div class="map-container">
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13730.381183833084!2d76.77525043487546!3d30.64536127494402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390feb2ab7664819%3A0x18ca44185ac813ef!2sThe%20Zirk!5e0!3m2!1sen!2sin!4v1748760037571!5m2!1sen!2sin" 
+      <img 
+        src="./images/location.PNG" 
         width="600" 
-        height="450" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+        height="450">
+      </img>
     </div>
   </section>
   
