--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="styles.css">
   <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -470,54 +472,55 @@
     <h2 class="glow-heading">Amenities</h2>
     <ul class="amenities-list">
       <li>
-        <img src="./icons/i1.jpg" alt="Clubhouse icon">
-        <span>Clubhouse</span>
+        <i class="fas fa-building fa-2x"></i>
+        <span class="glow-text">Clubhouse</span>
       </li>
       <li>
-        <img src="./icons/i2.jpg" alt="Kids Play Area icon">
-        <span>Kids Play Area</span>
+        <i class="fas fa-child fa-2x"></i>
+        <span class="glow-text">Kids Play Area</span>
       </li>
       <li>
-        <img src="./icons/i3.jpg" alt="Firefighting Equipment icon">
-        <span>Firefighting Equipment</span>
+        <i class="fas fa-fire-extinguisher fa-2x"></i>
+        <span class="glow-text">Firefighting Equipment</span>
       </li>
       <li>
-        <img src="./icons/i4.jpg" alt="Power Backup icon">
-        <span>Power Backup</span>
+        <i class="fas fa-bolt fa-2x"></i>
+        <span class="glow-text">Power Backup</span>
       </li>
       <li>
-        <img src="./icons/i5.jpg" alt="24 Hour Water Supply icon">
-        <span>24 Hour Water Supply</span>
+        <i class="fas fa-tint fa-2x"></i>
+        <span class="glow-text">24 Hour Water Supply</span>
       </li>
       <li>
-        <img src="./icons/i6.jpg" alt="Wi-Fi Connectivity icon">
-        <span>Wi-Fi Connectivity</span>
+        <i class="fas fa-wifi fa-2x"></i>
+        <span class="glow-text">Wi-Fi Connectivity</span>
       </li>
       <li>
-        <img src="./icons/i7.jpg" alt="Car Parking icon">
-        <span>Car Parking</span>
+        <i class="fas fa-car fa-2x"></i>
+        <span class="glow-text">Car Parking</span>
       </li>
       <li>
-        <img src="./icons/i8.jpg" alt="Conference Room icon">
-        <span>Conference Room</span>
+        <i class="fas fa-handshake fa-2x"></i>
+        <span class="glow-text">Conference Room</span>
       </li>
       <li>
-        <img src="./icons/i9.jpg" alt="Video Security icon">
-        <span>Video Security</span>
+        <i class="fas fa-video fa-2x"></i>
+        <span class="glow-text">Video Security</span>
       </li>
       <li>
-        <img src="./icons/i10.jpg" alt="Piped Gas icon">
-        <span>Piped Gas</span>
+        <i class="fas fa-gas-pump fa-2x"></i>
+        <span class="glow-text">Piped Gas</span>
       </li>
       <li>
-        <img src="./icons/i11.jpg" alt="Lift icon">
-        <span>Lift</span>
+        <i class="fas fa-elevator fa-2x"></i> <!-- Not supported, use alternate -->
+        <span class="glow-text">Lift</span>
       </li>
       <li>
-        <img src="./icons/i12.jpg" alt="3 Tier Security icon">
-        <span>3 Tier Security</span>
+        <i class="fas fa-shield-alt fa-2x"></i>
+        <span class="glow-text">3 Tier Security</span>
       </li>
     </ul>
+    
   </section>
   
 
