--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   <div class="col-12 col-md-6">
                     <div class="card border-0 shadow-sm">
                       <img src="./images/car-1.jpg" class="card-img-top floor-img" alt="Tower C">
-                      <div class="card-body">
+                      <div class="card-body text-align-center">
                         <h5 class="card-title">Tower A</h5>
                         <p class="card-text">Type - 3 BHK + Servant</p>
                         <p class="card-text">Super Area = 2290 sq.ft</p>
@@ -133,7 +133,7 @@
                   <div class="col-12 col-md-6">
                     <div class="card border-0 shadow-sm">
                       <img src="./images/car-2.jpg" class="card-img-top floor-img" alt="Tower A">
-                      <div class="card-body">
+                      <div class="card-body text-align-center">
                         <h5 class="card-title">Tower A</h5>
                         <p class="card-text">Type - 3 BHK + Servant</p>
                         <p class="card-text">Single Flat Area</p>
@@ -150,7 +150,7 @@
                   <div class="col-12 col-md-6">
                     <div class="card border-0 shadow-sm">
                       <img src="./images/car-3.jpg" class="card-img-top floor-img" alt="Tower B">
-                      <div class="card-body">
+                      <div class="card-body text-align-center">
                         <h5 class="card-title">Tower B</h5>
                         
                         <p class="card-text">Type - 3 BHK</p>
@@ -161,7 +161,7 @@
                   <div class="col-12 col-md-6">
                     <div class="card border-0 shadow-sm">
                       <img src="./images/car-4.jpg" class="card-img-top floor-img" alt="Tower D">
-                      <div class="card-body">
+                      <div class="card-body text-align-center">
                         <h5 class="card-title">Tower B</h5>
                         <p class="card-text">Type - 3 BHK</p>
                         <p class="card-text">Super Area = 1750 sq.ft</p>
@@ -178,7 +178,7 @@
                   <div class="col-12 col-md-6">
                     <div class="card border-0 shadow-sm">
                       <img src="./images/car-3.jpg" class="card-img-top floor-img" alt="Tower B">
-                      <div class="card-body">
+                      <div class="card-body text-align-center">
                         <h5 class="card-title">Tower B</h5>
                         <p class="card-text">Type - 3 BHK</p>
                         <p class="card-text">Super Area = 1750 sq.ft</p>
@@ -188,7 +188,7 @@
                   <div class="col-12 col-md-6">
                     <div class="card border-0 shadow-sm">
                       <img src="./images/car-4.jpg" class="card-img-top floor-img" alt="Tower D">
-                      <div class="card-body">
+                      <div class="card-body text-align-center">
                         <h5 class="card-title">Tower B</h5>
                         <p class="card-text">Type - 3 BHK</p>
                         <p class="card-text">Super Area = 1800 sq.ft</p>
@@ -206,7 +206,7 @@
                   <div class="col-12 col-md-6">
                     <div class="card border-0 shadow-sm">
                       <img src="./images/car-5.jpg" class="card-img-top floor-img" alt="Tower B">
-                      <div class="card-body">
+                      <div class="card-body text-align-center">
                         <h5 class="card-title">Tower C</h5>
                         <p class="card-text">Type - 3 BHK</p>
                         <p class="card-text">Single Flat Area</p>
@@ -217,7 +217,7 @@
                   <div class="col-12 col-md-6">
                     <div class="card border-0 shadow-sm">
                       <img src="./images/car-6.jpg" class="card-img-top floor-img" alt="Tower D">
-                      <div class="card-body">
+                      <div class="card-body text-align-center">
                         <h5 class="card-title">Tower C</h5>
                         <p class="card-text">Type - 3 BHK</p>
                         <p class="card-text">Super Area = 1900 sq.ft</p>
@@ -234,7 +234,7 @@
                   <div class="col-12 col-md-6">
                     <div class="card border-0 shadow-sm">
                       <img src="./images/car-7.jpg" class="card-img-top floor-img" alt="Tower B">
-                      <div class="card-body">
+                      <div class="card-body text-align-center">
                         <h5 class="card-title">Tower D</h5>
                         <p class="card-text">Type - 3 BHK</p>
                         <p class="card-text">Super Area = 1990 sq.ft</p>
