--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
     </div>
   </section>
   <section class="contact-section">
-    <h2>Talk To Us</h2>
+    <h2>Book a Site Visit</h2>
     <form class="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
       <div class="form-group">
         <label for="name">Full Name</label>
