--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="row align-items-start">
         <!-- Left Side Content -->
         <div class="col-md-6 mb-4 mb-md-0">
-          <h1 class="display-6 fw-bold">The Zirk - 3 & 3+1 Luxurious Apartments in Zirakpur</h1>
+          <h1 class="display-6 fw-bold">The Zirk - 3 BHK Sizes 1750 sqft, 1800 sqft, 1900 sqft, 1990 sqft &  3 BHK with Servant Room Size 2290 sqft</h1>
           <p class="lead text-primary">Floor Plans</p>
           <p>
             <strong>The Zirk</strong> by <strong>Urban Nest Projects</strong> sets a new benchmark in luxury living, offering a lifestyle that goes beyond expectations. Strategically located in the heart of the city, this exclusive development features elegantly designed 3 & 3+1 BHK apartments paired with world-class amenities.
