--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="right-section">
       <h2>Near To Possession</h2>
-      <p class="contact-info">Call us: <a href="tel:+919023199199">+91 9023199199</a></p>
+      <p class="contact-info">Call us: <a href="tel:9023199199">+91 9023199199</a></p>
     </div>
     
   </header>
