--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
       
       <!-- Left: Contact Information -->
       <div class="contact-info">
-        <h2 class="glow-heading">Contact Us</h2>
+        <h2 class="glow-heading color-white">Contact Us</h2>
         <p><strong>Address:</strong><br>High Ground Road, Zirakpur – Patiala Highway, Punjab</p>
         <p><strong>Phone:</strong><br><a class="color-grey" href="tel:9023199199">+91 90231-99199</a></p>
         <p><strong>Email:</strong><br><a class="color-grey" href="mailto:anil.tnwr@gmail.com">anil.tnwr@gmail.com</a></p>
